@@ -8,8 +8,6 @@ import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import com.google.common.collect.ImmutableMap;
-
 import ca.gc.aafc.dina.security.DinaAuthenticatedUser;
 import ca.gc.aafc.dina.security.DinaRole;
 
@@ -20,9 +18,9 @@ public class DinaAuthenticatedUserConfig {
   public static final String USER_NAME = "test_user";
   public static final String TEST_BUCKET = "test";
   public static final Map<String, Set<DinaRole>> ROLES_PER_GROUPS =
-    ImmutableMap.of(
-      TEST_BUCKET, Collections.singleton(DinaRole.STAFF),
-      "Group 2", Collections.singleton(DinaRole.STAFF)
+    Map.of(
+      TEST_BUCKET, Collections.singleton(DinaRole.GUEST),
+      "Group 2", Collections.singleton(DinaRole.GUEST)
     );
 
   @Bean
